# py_parallelizer

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml  test_file.py
.github/: CODEOWNERS  copilot-instructions.md
.github/workflows/: python-app.yml  semantic-release.yml
src/py_parallelizer/: __init__.py  base.py  basic_function.py  executor.py  parallelizer.py  utils.py
src/py_parallelizer/executors/: __init__.py  base.py  multiprocess.py  threaded.py  threader.py
src/py_parallelizer/utils/: logging.py
tests/integration/: __init__.py  test_executor_integration.py  test_interrupt_handling.py  test_multiprocess_integration.py  test_nested_parallelism.py  test_threaded_integration.py
tests/unit/: __init__.py  test_base.py  test_basic_function.py  test_executor.py  test_logging_utils.py  test_placeholder.py  test_utils.py
tests/unit/test_executors/: __init__.py  test_multiprocess.py  test_results_func.py  test_threaded.py
