[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "py_parallelizer"
license = { text = '"MIT License"' }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["readme", "version"]
requires-python = ">=3.11"
dependencies = [
    "psutil >=7.2.0",
    "tqdm >=4.65.0",
    "pytest>=7.1.2",
    "pytest-xdist>=2.5.0",
    "pytest-sugar>=0.9.5",
    "pytest-cov>=3.0.0",
]

[[project.authors]]
name = "Jonathan van Leeuwen"

[project.urls]
Homepage = "https://github.com/Jonathan van Leeuwen/py_parallelizer"
"Bug Tracker" = "https://github.com/Jonathan van Leeuwen/py_parallelizer/issues"

[tool.setuptools]
include-package-data = true
zip-safe = false
package-dir = { "" = "src" }

[tool.setuptools.packages]
find = { namespaces = false }

[tool.setuptools.dynamic]
readme = { file = ["README.md", "LICENSE"], content-type = "text/markdown" }
version = { attr = "py_parallelizer.__version__" }

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = """
--cov src
--cov-report html:reports/htmlcov"""

[tool.semantic_release]
version_variables = [
    'src/py_parallelizer/__init__.py:__version__',
]
branch = "main"
upload_to_repository = false
